--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Solid_Example_Converter</string>
+    <string name="app_name">MaxRate</string>
 </resources>
